test/spec_vectors/align/ok/module_14.wat
(module (memory 0) (func (i32.store8 align=1 (i32.const 0) (i32.const 1))))