test/spec_vectors/align/fail/module_97.wat
(module (memory 0) (func (i32.store8 align=2 (i32.const 0) (i32.const 0))))